# meshque

./: .gitignore  AGENTS.md  Cargo.toml  macos-down.sh  macos-up.sh  test-mesh.sh
.github/workflows/: build.yml
.sisyphus/plans/: connect-ip-production-ready.md
connect-ip/: Cargo.toml  shell.nix
connect-ip/benches/: throughput.rs
connect-ip/examples/: simple_client.rs  simple_proxy.rs
connect-ip/fuzz/: Cargo.toml
connect-ip/fuzz/fuzz_targets/: fuzz_capsule.rs  fuzz_datagram.rs
connect-ip/src/: client.rs  datagram.rs  error.rs  lib.rs  proxy.rs  session.rs  types.rs  varint.rs
connect-ip/src/capsule/: address.rs  codec.rs  mod.rs  route.rs
connect-ip/tests/: address_capsules.rs  address_negotiation.rs  capsule_codec.rs  datagram_framing.rs  go_proxy.rs  interop.rs  loopback.rs  rfc_conformance.rs  route_capsules.rs  varint.rs
connect-ip/tests/helpers/: mod.rs
connect-ip/tests/interop/go_programs/: go.mod  proxy.go
docs/: testing-macos.md
docs/superpowers/plans/: 2026-03-28-connect-ip-crate.md
docs/superpowers/specs/: 2026-03-27-connect-ip-crate-design.md  2026-03-27-meshque-roadmap.md  2026-03-29-mesh-mvp-design.md  2026-03-29-peer-binary-design.md  2026-03-29-phase1b-untested.md  2026-03-29-signaling-server-design.md  2026-03-29-warp-interop-analysis.md  2026-03-30-h3-connect-ip-alignment.md
meshque/: Cargo.toml
meshque/src/: config.rs  connection.rs  identity.rs  main.rs  mesh.rs  nat.rs  peer_table.rs  signaling.rs  tun_device.rs  tunnel.rs
meshque/tests/: connection_flow.rs
signaling/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
signaling/entry/: node.ts  workers.ts
signaling/src/: app.ts  types.ts  validation.ts
signaling/src/routes/: networks.ts  rooms.ts
signaling/src/storage/: adapter.ts  memory.ts  workers-kv.ts
signaling/test/: networks.test.ts  rooms.test.ts
