[package]
name = "connect-ip"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "RFC 9484 CONNECT-IP implementation over HTTP/3"
repository = "https://github.com/TODO/connect-ip"

[dependencies]
quinn = "0.11"
h3 = { git = "https://github.com/hyperium/h3", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
h3-quinn = { git = "https://github.com/hyperium/h3", features = ["datagram"] }
h3-datagram = { git = "https://github.com/hyperium/h3" }
http = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
interop = []

[[bench]]
name = "throughput"
harness = false
