[package]
name = "connect-ip-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1"
connect-ip = { path = ".." }

[[bin]]
name = "fuzz_capsule"
path = "fuzz_targets/fuzz_capsule.rs"
doc = false

[[bin]]
name = "fuzz_datagram"
path = "fuzz_targets/fuzz_datagram.rs"
doc = false
